# ITKSkullStrip

./: .travis.yml  CMakeLists.txt  CTestConfig.cmake  INSTALL  README.rst  itk-module.cmake  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: build-test-package.yml
doc/: InsightJournal.sty  article.tex  skullStrip.bib
examples/: CMakeLists.txt  SkullStripping.cxx
include/: itkStripTsImageFilter.h  itkStripTsImageFilter.hxx
test/: CMakeLists.txt  ImageCompare.cxx  SkullStripping.cxx  SkullStrippingTest.cxx  itkStripTsImageFilterTest.cxx
test/Baseline/: outputMaskBaseline.mha.cid  outputMaskBaseline.mha.sha512
test/Input/: atlasImage.mha.cid  atlasImage.mha.sha512  atlasMask.mha.cid  atlasMask.mha.sha512  brainweb.mha.cid  brainweb.mha.sha512
wrapping/: itkStripTsImageFilter.wrap
